--- a/PracticeApplication/appsettings.json
+++ b/PracticeApplication/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PracticeApplicationContext": "Data Source=PracticeApplication.db"
+  }
 }
