--- a/PatientAnalytics/appsettings.json
+++ b/PatientAnalytics/appsettings.json
@@ -17,6 +17,6 @@
     "Salt": "YnyvhHfAASiTxLAtfTzTMq2UB2pCHJ"
   },
   "ConnectionStrings": {
-    "PracticeApplicationContext": "Data Source=PracticeApplication.db"
+    "PatientAnalyticsContext": "Data Source=PatientAnalytics.db"
   }
 }
