--- a/PatientAnalytics/PatientAnalytics.csproj
+++ b/PatientAnalytics/PatientAnalytics.csproj
@@ -64,15 +64,15 @@
 
     <ItemGroup>
       <EmbeddedResource Update="Blazor\Localization\Localized.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Localized.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Blazor\Localization\Localized.de.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Localized.de.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Blazor\Localization\Localized.zh.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Localized.zh.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Utils\Localization\ApiResponseLocalized.resx">
@@ -83,6 +83,10 @@
         <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>ApiResponseLocalized.de.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+        <EmbeddedResource Update="Utils\Localization\ApiResponseLocalized.zh.resx">
+            <Generator>PublicResXFileCodeGenerator</Generator>
+            <LastGenOutput>ApiResponseLocalized.zh.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
